Add padding and Author font

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 Hey you, don't tell me there's no hope at all<br>
                 Together we stand, divided we fall.<br>
             </p>
-            <div class="autor">
+            <div class="author">
                 <p>Author: Roger Waters</p>
             </div>
         </div>
